--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "vite"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "framer-motion": "^12.7.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
