--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "framer-motion": "^12.7.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
